Footer gap fixed

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -214,7 +214,7 @@ body {
   
   .footer {
       background-color: rgb(226, 225, 225);
-      width: 100%;
+      width: 101%;
       height: 25px;
       position: fixed;
       text-align: center;
@@ -387,6 +387,7 @@ body {
           width: 101vw;
           display: flex;
           &__titlecontainer {
+              
               width: 101%;
               justify-content: center;
               background-size: 100%;
